<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_location</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Time">Time</string>
    <string name="Speed">Speed</string>
    <string name="Altitude">Altitude</string>
    <string name="start_background">Start Background</string>
    <string name="stop_background">Terminate Background</string>
    <string name="refresh_interval">Refresh Rate (sec)</string>
    <string name="high_accuracy">High Accuracy</string>
    <string name="balanced_power">Balanced Power</string>
    <string name="type">Type</string>

</resources>